[package]
name = "background_cat"
version = "0.1.0"
authors = ["AppleTheGolden <scotsbox@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.7"
lazy_static = "1.4.0"
reqwest = { version = "0.11.4", features = ["json"] }
log = { version = "0.4.8", features = ["release_max_level_info"] }
env_logger = "0.8.4"
kankyo = "0.3.0"
tokio = { version = "1.8.1", features = ["macros", "rt-multi-thread"] }
futures = "0.3.4"
serde = { version = "1.0.106", features = ["derive"] }

[dependencies.serenity]
version = "0.10"
default-features = false
features = ["client", "model", "gateway", "native_tls_backend", "cache", "utils", "framework", "standard_framework"]

[profile.release]
lto = true
