[tool.poetry]
name = "parserbot"
version = "0.1.0"
description = "A discord bot to parse log files for common mistakes."
authors = ["AppleTheGolden <scotsbox@protonmail.com>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"
"discord.py" = "^1.2.3"

[tool.poetry.dev-dependencies]
black = "^19.3b0"
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
