[package]
name = "discord-cat"
version = "0.1.0"
edition = "2021"

[dependencies]
background_cat = { path = ".."}

regex = "1.5.5"
lazy_static = "1.4.0"
reqwest = { version = "0.11.10", features = ["json"] }
log = { version = "0.4.16", features = ["release_max_level_info"] }
env_logger = "0.9.0"
kankyo = "0.3.0"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3.21"
serde = { version = "1.0.136", features = ["derive"] }

[dependencies.serenity]
version = "0.10"
default-features = false
features = ["client", "model", "gateway", "native_tls_backend", "cache", "utils", "framework", "standard_framework"]
